--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -43,16 +43,16 @@ body {
     --popover-foreground: 0 0% 100%;
     --primary: 0 0% 98%;
     --primary-foreground: 217, 33%, 17%;
-    --secondary: 0 0% 98%;
-    --secondary-foreground: 175 79% 26%;
-    --muted: 217, 33%, 17%;
-    --muted-foreground: 240 4.8% 95.9%;
-    --accent: 0 0% 98%;
-    --accent-foreground: 29 96% 62%;
+    --secondary: 175 79% 26%;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 240 4.8% 95.9%;
+    --muted-foreground: 217, 33%, 17%;
+    --accent: 29 96% 62%;
+    --accent-foreground: 0 0% 98%;
     --destructive: 0 0% 98%;
     --destructive-foreground: 0 73% 40%;
     --border: 215 27.9% 16.9%;
-    --input: 215 27.9% 16.9%;
+    --input: 217, 33%, 17%;
     --ring: 216 12.2% 83.9%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
