--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -23,10 +23,10 @@ body {
     --muted-foreground: 217, 33%, 17%;
     --accent: 29 96% 62%;
     --accent-foreground: 0 0% 98%;
-    --destructive: 0 73% 40%;
+    --destructive: 0 73% 50%;
     --destructive-foreground: 0 0% 98%;
     --border: 217, 33%, 17%;
-    --input: 0 0% 100%;
+    --input: 217, 33%, 17%;
     --ring: 224 71.4% 4.1%;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
@@ -38,7 +38,7 @@ body {
   .dark {
     --background: 217, 33%, 17%;
     --foreground: 0 0% 100%;
-    --card: 240 10% 10%;
+    --card: 217, 33%, 22%;
     --card-foreground: 0 0% 100%;
     --popover: 240 10% 10%;
     --popover-foreground: 0 0% 100%;
@@ -46,8 +46,8 @@ body {
     --primary-foreground: 217, 33%, 17%;
     --secondary: 175 79% 26%;
     --secondary-foreground: 0 0% 98%;
-    --muted: 215 37.9% 35.9%;
-    --muted-foreground: 217, 33%, 17%;
+    --muted: 217, 33%, 27%;
+    --muted-foreground: 0 0% 100%;
     --accent: 29 96% 62%;
     --accent-foreground: 0 0% 98%;
     --destructive: 0 0% 98%;
